# 2-terminal-downloader

./: .gitignore  .gitmodules  README.md  index.html  params.json
etc/: curl-config.sh
etc/cmake/: CMakeLists.txt
etc/sublime-text/: lc-download.sublime-project
lib/curl/7.37.0-1/osx-10.9_x86/lib/: libcurl.4.dylib  libcurl.la
lib/curl/7.37.0-1/osx-10.9_x86/lib/pkgconfig/: libcurl.pc
lib/curl/7.37.0-1/win-7_msvc9_x86_64/lib/: curl.lib
src/c/: lc_download.c
src/python/: lc_download.py
